rns-lang/tests/snapshots/error-lexer-directives-unknown_directive_as_first_token_werror.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
    .unknown_directive HelloWorld
.end
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/unknown_directive_as_first_token.ja:1:5 ]
   │
 1 │     .unknown_directive HelloWorld
   │     ─────────┬────────  
   │              ╰────────── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
