rns-lang/tests/snapshots/error-lexer-integers-invalid_format_letters.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
.code 123abc
----- STDERR -----
[E001] Error: invalid integer
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/rns/test_data/integration/error/lexer/integers/invalid_format_letters.ja:2:7 ]
   │
 2 │ .code 123abc
   │       ───┬──  
   │          ╰──── '123abc' contains invalid characters
   │ 
   │ Note: Integers must be between -2147483648 and 2147483647
───╯
----- HASH -----
not generated
